--- a/views/layout/main.hbs
+++ b/views/layout/main.hbs
@@ -15,23 +15,23 @@
       type="image/x-icon"
       href="assets/media/favicon.png"
     />
-    <link rel="stylesheet" href="assets/css/vendor/bootstrap.min.css" />
-    <link rel="stylesheet" href="assets/css/vendor/font-awesome.css" />
-    <link rel="stylesheet" href="assets/css/vendor/slick.css" />
-    <link rel="stylesheet" href="assets/css/vendor/slick-theme.css" />
-    <link rel="stylesheet" href="assets/css/vendor/sal.css" />
-    <link rel="stylesheet" href="assets/css/vendor/magnific-popup.css" />
+    <link rel="stylesheet" href="/assets/css/vendor/bootstrap.min.css" />
+    <link rel="stylesheet" href="/assets/css/vendor/font-awesome.css" />
+    <link rel="stylesheet" href="/assets/css/vendor/slick.css" />
+    <link rel="stylesheet" href="/assets/css/vendor/slick-theme.css" />
+    <link rel="stylesheet" href="/assets/css/vendor/sal.css" />
+    <link rel="stylesheet" href="/assets/css/vendor/magnific-popup.css" />
     <link
       rel="stylesheet"
-      href="assets/css/vendor/green-audio-player.min.css"
+      href="/assets/css/vendor/green-audio-player.min.css"
     />
     <link
       rel="stylesheet"
-      href="assets/css/vendor/odometer-theme-default.css"
+      href="/assets/css/vendor/odometer-theme-default.css"
     />
 
     <!-- Site Stylesheet -->
-    <link rel="stylesheet" href="assets/css/app.css" />
+    <link rel="stylesheet" href="/assets/css/app.css" />
 
   </head>
 
@@ -78,19 +78,19 @@
               <div class="header-logo">
                 <a href="index-1.html"><img
                     class="light-version-logo"
-                    src="assets/media/logo.svg"
+                    src="/assets/media/logo.svg"
                     alt="logo"
                     style="width: 200px;"
                   /></a>
                 <a href="index-1.html"><img
                     class="dark-version-logo"
-                    src="assets/media/logo.svg"
+                    src="/assets/media/logo.svg"
                     alt="logo"
                     style="width: 160px;"
                   /></a>
                 <a href="index-1.html"><img
                     class="sticky-logo"
-                    src="assets/media/logo.svg"
+                    src="/assets/media/logo.svg"
                     alt="logo3"
                     style="width: 160px;"
                   /></a>
@@ -495,23 +495,23 @@
     </div>
 
     <!-- Jquery Js -->
-    <script src="assets/js/vendor/jquery-3.6.0.min.js"></script>
-    <script src="assets/js/vendor/bootstrap.min.js"></script>
-    <script src="assets/js/vendor/isotope.pkgd.min.js"></script>
-    <script src="assets/js/vendor/imagesloaded.pkgd.min.js"></script>
-    <script src="assets/js/vendor/odometer.min.js"></script>
-    <script src="assets/js/vendor/jquery-appear.js"></script>
-    <script src="assets/js/vendor/slick.min.js"></script>
-    <script src="assets/js/vendor/sal.js"></script>
-    <script src="assets/js/vendor/jquery.magnific-popup.min.js"></script>
-    <script src="assets/js/vendor/js.cookie.js"></script>
-    <script src="assets/js/vendor/jquery.style.switcher.js"></script>
-    <script src="assets/js/vendor/jquery.countdown.min.js"></script>
-    <script src="assets/js/vendor/tilt.js"></script>
-    <script src="assets/js/vendor/green-audio-player.min.js"></script>
-    <script src="assets/js/vendor/jquery.nav.js"></script>
+    <script src="/assets/js/vendor/jquery-3.6.0.min.js"></script>
+    <script src="/assets/js/vendor/bootstrap.min.js"></script>
+    <script src="/assets/js/vendor/isotope.pkgd.min.js"></script>
+    <script src="/assets/js/vendor/imagesloaded.pkgd.min.js"></script>
+    <script src="/assets/js/vendor/odometer.min.js"></script>
+    <script src="/assets/js/vendor/jquery-appear.js"></script>
+    <script src="/assets/js/vendor/slick.min.js"></script>
+    <script src="/assets/js/vendor/sal.js"></script>
+    <script src="/assets/js/vendor/jquery.magnific-popup.min.js"></script>
+    <script src="/assets/js/vendor/js.cookie.js"></script>
+    <script src="/assets/js/vendor/jquery.style.switcher.js"></script>
+    <script src="/assets/js/vendor/jquery.countdown.min.js"></script>
+    <script src="/assets/js/vendor/tilt.js"></script>
+    <script src="/assets/js/vendor/green-audio-player.min.js"></script>
+    <script src="/assets/js/vendor/jquery.nav.js"></script>
     <!-- Site Scripts -->
-    <script src="assets/js/app.js"></script>
+    <script src="/assets/js/app.js"></script>
   </body>
 
 </html>
