--- a/views/layout/main.hbs
+++ b/views/layout/main.hbs
@@ -101,7 +101,7 @@
                   <div class="d-block d-lg-none">
                     <div class="mobile-nav-header">
                       <div class="mobile-nav-logo">
-                        <a href="index-1.html">
+                        <a href="/">
                           <img
                             class="light-mode"
                             src="assets/media/logo-2.svg"
