--- a/views/services.hbs
+++ b/views/services.hbs
@@ -114,7 +114,8 @@
                     </div>
                     <div class="content">
                         <h5 class="title"> <a href="service-design.html">Design</a></h5>
-                        <p>Simply drag and drop photos and videos into your workspace to automatically add them to your Collab Cloud library.</p>
+                        <p>{{categories[0].description}}</p>
+                        {{console.log("cat: ", categories)}}
                         <a href="service-design.html" class="more-btn">Find out more</a>
                     </div>
                 </div>
