--- a/views/layout/main.hbs
+++ b/views/layout/main.hbs
@@ -13,7 +13,7 @@
     <link
       rel="shortcut icon"
       type="image/x-icon"
-      href="assets/media/favicon.png"
+      href="assets/media/favicon.ico"
     />
     <link rel="stylesheet" href="/assets/css/vendor/bootstrap.min.css" />
     <link rel="stylesheet" href="/assets/css/vendor/font-awesome.css" />
@@ -76,21 +76,21 @@
           <div class="container">
             <div class="header-navbar">
               <div class="header-logo">
-                <a href="index-1.html"><img
+                <a href="/"><img
                     class="light-version-logo"
-                    src="/assets/media/logo.svg"
+                    src="/assets/media/Varients/SVG/conglobase_original.svg"
                     alt="logo"
                     style="width: 200px;"
                   /></a>
-                <a href="index-1.html"><img
+                <a href="/"><img
                     class="dark-version-logo"
-                    src="/assets/media/logo.svg"
+                    src="/assets/media/Varients/SVG/conglobase_white.svg"
                     alt="logo"
                     style="width: 160px;"
                   /></a>
-                <a href="index-1.html"><img
+                <a href="/"><img
                     class="sticky-logo"
-                    src="/assets/media/logo.svg"
+                    src="/assets/media/Varients/SVG/conglobase_dark_grey.svg"
                     alt="logo3"
                     style="width: 160px;"
                   /></a>
@@ -124,7 +124,7 @@
                     <li class="menu-item-has-children">
                       <a href="javascript:void(0);">Digital Agency</a>
                       <ul class="axil-submenu">
-                        <li><a href="index-1.html">Digital Agency</a></li>
+                        <li><a href="/">Digital Agency</a></li>
                         <li><a href="index-2.html">Creative Agency</a></li>
                         <li><a href="index-3.html">Personal Portfolio</a></li>
                         <li><a href="index-4.html">Home Startup</a></li>
@@ -134,7 +134,7 @@
                     <li class="menu-item-has-children">
                       <a href="javascript:void(0);">Services</a>
                       <ul class="axil-submenu">
-                        <li><a href="service.html">Service</a></li>
+                        <li><a href="services">Service</a></li>
                         <li><a href="service-2.html">Service Two</a></li>
                         <li><a href="service-design.html">Service Details</a></li>
                       </ul>
@@ -269,7 +269,7 @@
           <div class="row">
             <div class="col-lg-5 col-xl-6">
               <ul class="main-navigation list-unstyled">
-                <li><a href="index-1.html">Digital Agency</a></li>
+                <li><a href="index">Digital Agency</a></li>
                 <li><a href="index-2.html">Creative Agency</a></li>
                 <li><a href="index-3.html">Personal Portfolio</a></li>
                 <li><a href="index-4.html">Home Startup</a></li>
