--- a/views/services.hbs
+++ b/views/services.hbs
@@ -107,20 +107,21 @@
             <h2 class="title">Services we can <br> help you with</h2>
         </div>
         <div class="row">
+            {{#each services}}
             <div class="col-lg-4 col-md-6" data-sal="slide-up" data-sal-duration="800" data-sal-delay="100">
                 <div class="services-grid service-style-2">
                     <div class="thumbnail">
-                        <img src="assets/media/icon/icon-1.png" alt="icon">
+                        <img src={{this.iconUrl}} alt="icon">
                     </div>
                     <div class="content">
-                        <h5 class="title"> <a href="service-design.html">Design</a></h5>
-                        <p>{{categories[0].description}}</p>
-                        {{console.log("cat: ", categories)}}
+                        <h5 class="title"> <a href="service-design.html">{{this.name}}</a></h5>
+                        <p>{{this.description}}Simply drag and drop photos and videos into your workspace to automatically add them to your Collab Cloud library.</p>
+                        {{!-- {{console.log("cat: ", categories)}} --}}
                         <a href="service-design.html" class="more-btn">Find out more</a>
                     </div>
                 </div>
-            </div>
-            <div class="col-lg-4 col-md-6" data-sal="slide-up" data-sal-duration="800" data-sal-delay="200">
+            </div>{{/each}}
+            {{!-- <div class="col-lg-4 col-md-6" data-sal="slide-up" data-sal-duration="800" data-sal-delay="200">
                 <div class="services-grid service-style-2">
                     <div class="thumbnail">
                         <img src="assets/media/icon/icon-2.png" alt="icon">
@@ -179,7 +180,7 @@
                         <a href="service-content-strategy.html" class="more-btn">Find out more</a>
                     </div>
                 </div>
-            </div>
+            </div> --}}
         </div>
     </div>
 </section>
