--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -10912,3 +10912,40 @@ body.op-modal-open {
     padding-bottom: 0;
   }
 }
+
+
+.truncate-line-1 {
+  display: -webkit-box;
+  -webkit-line-clamp: 1;
+  -webkit-box-orient: vertical; 
+  width: 250px;
+  overflow: hidden;
+}
+.truncate-line-2 {
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical; 
+  width: 250px;
+  overflow: hidden;
+}
+.truncate-line-3 {
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical; 
+  width: 250px;
+  overflow: hidden;
+}
+.truncate-line-4 {
+  display: -webkit-box;
+  -webkit-line-clamp: 4;
+  -webkit-box-orient: vertical; 
+  width: 250px;
+  overflow: hidden;
+}
+.truncate-line-5 {
+  display: -webkit-box;
+  -webkit-line-clamp: 5;
+  -webkit-box-orient: vertical; 
+  width: 250px;
+  overflow: hidden;
+}
