FInalised from my side

--- a/views/portfolio-detail.hbs
+++ b/views/portfolio-detail.hbs
@@ -12,20 +12,20 @@
             </div>
             <div class="col-lg-6">
                 <div class="banner-thumbnail" data-sal="slide-up" data-sal-duration="1000" data-sal-delay="400">
-                    <img class="paralax-image" src="assets/media/project/project-2.png" alt="Illustration">
+                    <img class="paralax-image" src="/assets/media/project/project-2.png" alt="Illustration">
                 </div>
             </div>
         </div>
     </div>
     <ul class="shape-group-8 list-unstyled">
         <li class="shape shape-1" data-sal="slide-right" data-sal-duration="500" data-sal-delay="100">
-            <img src="assets/media/others/bubble-9.png" alt="Bubble">
+            <img src="/assets/media/others/bubble-9.png" alt="Bubble">
         </li>
         <li class="shape shape-2" data-sal="slide-left" data-sal-duration="500" data-sal-delay="200">
-            <img src="assets/media/others/bubble-20.png" alt="Bubble">
+            <img src="/assets/media/others/bubble-20.png" alt="Bubble">
         </li>
         <li class="shape shape-3" data-sal="slide-up" data-sal-duration="500" data-sal-delay="300">
-            <img src="assets/media/others/line-4.png" alt="Line">
+            <img src="/assets/media/others/line-4.png" alt="Line">
         </li>
     </ul>
 </div>
@@ -94,58 +94,6 @@
     </div>
 </section>
 <!--=====================================-->
-<!--=       Video Popup Area Start      =-->
-<!--=====================================-->
-<div class="section section-padding-equal bg-color-light">
-    <div class="container">
-        <div class="about-expert">
-            <div class="thumbnail">
-                <img src="assets/media/about/about-1.png" alt="Thumbnail">
-                <div class="popup-video">
-                    <a href="https://www.youtube.com/watch?v=1iIZeIy7TqM" class="play-btn popup-youtube"><i class="fas fa-play"></i></a>
-                </div>
-            </div>
-        </div>
-    </div>
-    <ul class="shape-group-16 list-unstyled">
-        <li class="shape shape-1"><img src="assets/media/others/circle-2.png" alt="circle"></li>
-        <li class="shape shape-2"><img src="assets/media/others/bubble-2.png" alt="Line"></li>
-        <li class="shape shape-3"><img src="assets/media/others/bubble-1.png" alt="Line"></li>
-    </ul>
-</div>
-<!--=====================================-->
 <!--=     Call To Action Area Start     =-->
 <!--=====================================-->
-<section class="section call-to-action-area">
-    <div class="container">
-        <div class="call-to-action">
-            <div class="section-heading heading-light">
-                <span class="subtitle">Let's Work Together</span>
-                <h2 class="title">Need a successful project?</h2>
-                <a href="contact.html" class="axil-btn btn-large btn-fill-white">Estimate Project</a>
-            </div>
-            <div class="thumbnail">
-                <div class="larg-thumb" data-sal="zoom-in" data-sal-duration="600" data-sal-delay="100">
-                    <img class="paralax-image" src="assets/media/others/chat-group.png" alt="Chat">
-                </div>
-                <ul class="list-unstyled small-thumb">
-                    <li class="shape shape-1" data-sal="slide-right" data-sal-duration="800" data-sal-delay="400">
-                        <img class="paralax-image" src="assets/media/others/laptop-poses.png" alt="Laptop">
-                    </li>
-                    <li class="shape shape-2" data-sal="slide-left" data-sal-duration="800" data-sal-delay="300">
-                        <img class="paralax-image" src="assets/media/others/bill-pay.png" alt="Bill">
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </div>
-    <ul class="list-unstyled shape-group-9">
-        <li class="shape shape-1"><img src="assets/media/others/bubble-12.png" alt="Comments"></li>
-        <li class="shape shape-2"><img src="assets/media/others/bubble-16.png" alt="Comments"></li>
-        <li class="shape shape-3"><img src="assets/media/others/bubble-13.png" alt="Comments"></li>
-        <li class="shape shape-4"><img src="assets/media/others/bubble-14.png" alt="Comments"></li>
-        <li class="shape shape-5"><img src="assets/media/others/bubble-16.png" alt="Comments"></li>
-        <li class="shape shape-6"><img src="assets/media/others/bubble-15.png" alt="Comments"></li>
-        <li class="shape shape-7"><img src="assets/media/others/bubble-16.png" alt="Comments"></li>
-    </ul>
-</section>
+{{>calltoaction}}
