--- a/views/contact.hbs
+++ b/views/contact.hbs
@@ -46,7 +46,7 @@
     <div class="row">
       <div class="col-xl-5 col-lg-6">
         <div class="contact-form-box shadow-box mb--30">
-          <h3 class="title">Get a free Keystroke quote now</h3>
+          <h3 class="title">Want to boost your Online Business</h3>
           <form
             method="POST"
             action="https://new.axilthemes.com/demo/template/abstrak/mail.php"
@@ -120,57 +120,23 @@
 <!--=====================================-->
 <!--=       Location  Area Start        =-->
 <!--=====================================-->
-<section class="section section-padding bg-color-dark overflow-hidden">
+<section class="section py-5 bg-color-dark overflow-hidden">
   <div class="container">
-    <div class="section-heading heading-light-left">
+    <div class="section-heading heading-light-left mb-0">
       <span class="subtitle">Find Us</span>
       <h2 class="title">Our office</h2>
     </div>
-    <div class="row">
-      <div class="col-lg-3 col-sm-6">
-        <div class="office-location">
-          <div class="thumbnail">
-            <img src="assets/media/others/location-1.png" alt="Office" />
-          </div>
-          <div class="content">
-            <h4 class="title">Virginia-HQ</h4>
-            <p>435 Pouros Locks United States</p>
-          </div>
-        </div>
-      </div>
-      <div class="col-lg-3 col-sm-6">
-        <div class="office-location">
-          <div class="thumbnail">
-            <img src="assets/media/others/location-2.png" alt="Office" />
-          </div>
-          <div class="content">
-            <h4 class="title">Nevada</h4>
-            <p>46 Watsica Creek Suite 071 United States</p>
-          </div>
-        </div>
-      </div>
-      <div class="col-lg-3 col-sm-6">
-        <div class="office-location">
-          <div class="thumbnail">
-            <img src="assets/media/others/location-3.png" alt="Office" />
-          </div>
-          <div class="content">
-            <h4 class="title">Columbia</h4>
-            <p>7140 Wehner Tunnel Washington, D.C</p>
-          </div>
-        </div>
-      </div>
-      <div class="col-lg-3 col-sm-6">
-        <div class="office-location">
-          <div class="thumbnail">
-            <img src="assets/media/others/location-4.png" alt="Office" />
-          </div>
-          <div class="content">
-            <h4 class="title">New Mexico</h4>
-            <p>10 Maggie Valleys United States</p>
-          </div>
-        </div>
-      </div>
+    <div class="rounded-4" style="overflow:hidden;">
+      <iframe
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3661195.7241687435!2d77.77424145470899!3d26.34635990180762!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x398f31dc80403041%3A0xe25427cdbde7fbf7!2sConglobase%20Solutions%20Pvt%20Ltd!5e0!3m2!1sen!2sin!4v1674931023996!5m2!1sen!2sin"
+        width="100%"
+        height="450"
+        style="border:0;border-radius:18px"
+        allowfullscreen=""
+        class="d-block"
+        loading="lazy"
+        referrerpolicy="no-referrer-when-downgrade"
+      ></iframe>
     </div>
   </div>
   <ul class="shape-group-11 list-unstyled">
