--- a/views/service-detail.hbs
+++ b/views/service-detail.hbs
@@ -9,18 +9,18 @@
             <p>Give your business a unique logo to stand out from the crowd. We’ll create custom logo for your company.</p>
         </div>
         <div class="banner-thumbnail" data-sal="slide-up" data-sal-duration="1000" data-sal-delay="400">
-            <img class="paralax-image" src="assets/media/banner/banner-thumb-4.png" alt="Illustration">
+            <img class="paralax-image" src="/assets/media/banner/banner-thumb-4.png" alt="Illustration">
         </div>
     </div>
     <ul class="shape-group-8 list-unstyled">
         <li class="shape shape-1" data-sal="slide-right" data-sal-duration="500" data-sal-delay="100">
-            <img src="assets/media/others/bubble-9.png" alt="Bubble">
+            <img src="/assets/media/others/bubble-9.png" alt="Bubble">
         </li>
         <li class="shape shape-2" data-sal="slide-left" data-sal-duration="500" data-sal-delay="200">
-            <img src="assets/media/others/bubble-21.png" alt="Bubble">
+            <img src="/assets/media/others/bubble-21.png" alt="Bubble">
         </li>
         <li class="shape shape-3" data-sal="slide-up" data-sal-duration="500" data-sal-delay="300">
-            <img src="assets/media/others/line-4.png" alt="Line">
+            <img src="/assets/media/others/line-4.png" alt="Line">
         </li>
     </ul>
 </div>
@@ -114,7 +114,7 @@
         </div>
         <div class="process-work" data-sal="slide-right" data-sal-duration="1000" data-sal-delay="100">
             <div class="thumbnail paralax-image">
-                <img src="assets/media/others/process-1.png" alt="Thumbnail">
+                <img src="/assets/media/others/process-1.png" alt="Thumbnail">
             </div>
             <div class="content">
                 <span class="subtitle">Step One</span>
@@ -124,7 +124,7 @@
         </div>
         <div class="process-work content-reverse" data-sal="slide-left" data-sal-duration="1000" data-sal-delay="100">
             <div class="thumbnail paralax-image">
-                <img src="assets/media/others/process-2.png" alt="Thumbnail">
+                <img src="/assets/media/others/process-2.png" alt="Thumbnail">
             </div>
             <div class="content">
                 <span class="subtitle">Step Two</span>
@@ -134,7 +134,7 @@
         </div>
         <div class="process-work" data-sal="slide-right" data-sal-duration="1000" data-sal-delay="100">
             <div class="thumbnail paralax-image">
-                <img src="assets/media/others/process-3.png" alt="Thumbnail">
+                <img src="/assets/media/others/process-3.png" alt="Thumbnail">
             </div>
             <div class="content">
                 <span class="subtitle">Step Three</span>
@@ -144,7 +144,7 @@
         </div>
         <div class="process-work content-reverse" data-sal="slide-left" data-sal-duration="1000" data-sal-delay="100">
             <div class="thumbnail paralax-image">
-                <img src="assets/media/others/process-4.png" alt="Thumbnail">
+                <img src="/assets/media/others/process-4.png" alt="Thumbnail">
             </div>
             <div class="content">
                 <span class="subtitle">Step four</span>
@@ -154,12 +154,12 @@
         </div>
     </div>
     <ul class="shape-group-17 list-unstyled">
-        <li class="shape shape-1"><img src="assets/media/others/bubble-24.png" alt="Bubble"></li>
-        <li class="shape shape-2"><img src="assets/media/others/bubble-23.png" alt="Bubble"></li>
-        <li class="shape shape-3"><img src="assets/media/others/line-4.png" alt="Line"></li>
-        <li class="shape shape-4"><img src="assets/media/others/line-5.png" alt="Line"></li>
-        <li class="shape shape-5"><img src="assets/media/others/line-4.png" alt="Line"></li>
-        <li class="shape shape-6"><img src="assets/media/others/line-5.png" alt="Line"></li>
+        <li class="shape shape-1"><img src="/assets/media/others/bubble-24.png" alt="Bubble"></li>
+        <li class="shape shape-2"><img src="/assets/media/others/bubble-23.png" alt="Bubble"></li>
+        <li class="shape shape-3"><img src="/assets/media/others/line-4.png" alt="Line"></li>
+        <li class="shape shape-4"><img src="/assets/media/others/line-5.png" alt="Line"></li>
+        <li class="shape shape-5"><img src="/assets/media/others/line-4.png" alt="Line"></li>
+        <li class="shape shape-6"><img src="/assets/media/others/line-5.png" alt="Line"></li>
     </ul>
 </section>
 <!--=====================================-->
@@ -176,7 +176,7 @@
                 <div class="project-grid">
                     <div class="thumbnail">
                         <a href="single-portfolio.html">
-                            <img src="assets/media/project/project-1.png" alt="project">
+                            <img src="/assets/media/project/project-1.png" alt="project">
                         </a>
                     </div>
                     <div class="content">
@@ -189,7 +189,7 @@
                 <div class="project-grid">
                     <div class="thumbnail">
                         <a href="single-portfolio.html">
-                            <img src="assets/media/project/project-2.png" alt="project">
+                            <img src="/assets/media/project/project-2.png" alt="project">
                         </a>
                     </div>
                     <div class="content">
@@ -201,43 +201,11 @@
         </div>
     </div>
     <ul class="shape-group-16 list-unstyled">
-        <li class="shape shape-1"><img src="assets/media/others/circle-2.png" alt="circle"></li>
-        <li class="shape shape-3"><img src="assets/media/others/bubble-1.png" alt="Line"></li>
+        <li class="shape shape-1"><img src="/assets/media/others/circle-2.png" alt="circle"></li>
+        <li class="shape shape-3"><img src="/assets/media/others/bubble-1.png" alt="Line"></li>
     </ul>
 </section>
 <!--=====================================-->
 <!--=     Call To Action Area Start     =-->
 <!--=====================================-->
-<section class="section call-to-action-area">
-    <div class="container">
-        <div class="call-to-action">
-            <div class="section-heading heading-light">
-                <span class="subtitle">Let's Work Together</span>
-                <h2 class="title">Need a successful project?</h2>
-                <a href="contact.html" class="axil-btn btn-large btn-fill-white">Estimate Project</a>
-            </div>
-            <div class="thumbnail">
-                <div class="larg-thumb" data-sal="zoom-in" data-sal-duration="600" data-sal-delay="100">
-                    <img class="paralax-image" src="assets/media/others/chat-group.png" alt="Chat">
-                </div>
-                <ul class="list-unstyled small-thumb">
-                    <li class="shape shape-1" data-sal="slide-right" data-sal-duration="800" data-sal-delay="400">
-                        <img class="paralax-image" src="assets/media/others/laptop-poses.png" alt="Laptop">
-                    </li>
-                    <li class="shape shape-2" data-sal="slide-left" data-sal-duration="800" data-sal-delay="300">
-                        <img class="paralax-image" src="assets/media/others/bill-pay.png" alt="Bill">
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </div>
-    <ul class="list-unstyled shape-group-9">
-        <li class="shape shape-1"><img src="assets/media/others/bubble-12.png" alt="Comments"></li>
-        <li class="shape shape-2"><img src="assets/media/others/bubble-16.png" alt="Comments"></li>
-        <li class="shape shape-3"><img src="assets/media/others/bubble-13.png" alt="Comments"></li>
-        <li class="shape shape-4"><img src="assets/media/others/bubble-14.png" alt="Comments"></li>
-        <li class="shape shape-5"><img src="assets/media/others/bubble-16.png" alt="Comments"></li>
-        <li class="shape shape-6"><img src="assets/media/others/bubble-15.png" alt="Comments"></li>
-        <li class="shape shape-7"><img src="assets/media/others/bubble-16.png" alt="Comments"></li>
-    </ul>
-</section>
+{{>calltoaction}}
