--- a/views/services2.hbs
+++ b/views/services2.hbs
@@ -1,4 +1,4 @@
-<!--=====================================-->
+{{!-- <!--=====================================-->
 <!--=       Breadcrumb Area Start       =-->
 <!--=====================================-->
 <div class="breadcrum-area breadcrumb-banner">
@@ -423,4 +423,4 @@
         <li class="shape shape-6"><img src="assets/media/others/bubble-15.png" alt="Comments"></li>
         <li class="shape shape-7"><img src="assets/media/others/bubble-16.png" alt="Comments"></li>
     </ul>
-</section>
+</section> --}}
