about page added

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -6,7 +6,7 @@
     <div class="row align-items-end align-items-xl-start">
       <div class="col-lg-6">
         <div class="banner-content" data-sal="slide-up" data-sal-duration="1000" data-sal-delay="100">
-          <h1 class="title">Connect. Simply and Succeed</h1>
+          <h1 class="title">Connect. Simply. Succeed.</h1>
           <span class="subtitle">We are a full-service company that offers a
             range of services including software development, data analysis, and
             project management. We work with clients to understand their
@@ -72,22 +72,14 @@
         <div class="about-us">
           <div class="section-heading heading-left mb-0">
             <span class="subtitle">About Us</span>
-            <h2 class="title mb--40">We do design, code & develop.</h2>
+            <h2 class="title mb--40">Empowering Business Growth</h2>
             <p>
 
-              Remember the pendemic days (COVID-19), shhhit.... Nobody can
-              forget those days, many business somehow servived, many businesses
-              not even recovered their losses, and many are forced to shutdown
-              due to financial stability. The COVID-19 outbreak is likely to
-              cause bankruptcy for many well-known brands in many industries as
-              consumers stay at home and economies are shut down (Tucker, 2020).
-              In the US, famous companies such as Sears, JCPenney, Neiman
-              Marcus, Hertz, and J. Crew are under enormous financial pressure.
-              The travel industry is deeply affected; 80% of hotel rooms are
-              empty (Asmelash & Cooper, 2020), airlines cut their workforce by
-              90%, and tourism destinations are likely to see no profits in
-              2020.
+             Our company, Conglobase Solutions Private Limited, was founded in March 2022 by Santosh Kushwaha and Gayatri Kushwaha. With the increasing impact of the COVID-19 pandemic on businesses, we saw a need for digital solutions to help companies establish and strengthen their online presence. Our goal is to help businesses not only survive, but thrive in the digital age.
+
             </p>
+            <p>Our team is composed of experts in digital marketing, with a strong focus on website development, search engine optimization, social media marketing, and content strategy. With our help, businesses can increase their visibility, attract more customers, and achieve their goals.
+</p>
           </div>
         </div>
       </div>
@@ -295,7 +287,7 @@
         <span class="subtitle">Let's Work Together</span>
         <h2 class="title">Need a successful project?</h2>
         <a
-          href="contact.html"
+          href="contact"
           class="axil-btn btn-large btn-fill-white"
         >Estimate Project</a>
       </div>
