--- a/views/layout/main.hbs
+++ b/views/layout/main.hbs
@@ -121,7 +121,7 @@
                       </ul>
                     </li> --}}
                     <li><a href="/about">About Us</a></li>
-                    <li class="btn-primary btn py-0"><a href="/contact" class="p-0 text-white">Contact</a></li>
+                    <li class=""><a href="/contact" class="p-0 ">Get Free Consultation</a></li>
                   </ul>
                 </nav>
                 <!-- End Mainmanu Nav -->
