--- a/views/partials/counters.hbs
+++ b/views/partials/counters.hbs
@@ -3,8 +3,7 @@
     <div class="section-heading heading-light">
       <span class="subtitle">Featured Case Study</span>
       <h2 class="title">Design startup movement</h2>
-      <p>In vel varius turpis, non dictum sem. Aenean in efficitur ipsum, in
-        egestas ipsum. Mauris in mi ac tellus.</p>
+      <p>We are growing with our clients</p>
     </div>
     <div class="row">
       <div
@@ -15,13 +14,13 @@
       >
         <div class="counterup-progress active">
           <div class="icon">
-            <img src="assets/media/icon/icon-7.png" alt="Apple" />
+            <img src="assets/media/icon/icon-7.png" alt="Conglobase" />
           </div>
           <div class="count-number h2">
-            <span class="number count" data-count="15">15</span>
+            <span class="number count" data-count="200">200</span>
             <span class="symbol">+</span>
           </div>
-          <h6 class="title">Years of operation</h6>
+          <h6 class="title">Happy Clients</h6>
         </div>
       </div>
       <div
@@ -32,10 +31,10 @@
       >
         <div class="counterup-progress">
           <div class="icon">
-            <img src="assets/media/icon/icon-8.png" alt="Apple" />
+            <img src="assets/media/icon/icon-8.png" alt="Conglobase" />
           </div>
           <div class="count-number h2">
-            <span class="number count" data-count="360">360</span>
+            <span class="number count" data-count="20">20</span>
             <span class="symbol">+</span>
           </div>
           <h6 class="title">Projects deliverd</h6>
@@ -49,10 +48,10 @@
       >
         <div class="counterup-progress">
           <div class="icon">
-            <img src="assets/media/icon/icon-9.png" alt="Apple" />
+            <img src="assets/media/icon/icon-9.png" alt="Conglobase" />
           </div>
           <div class="count-number h2">
-            <span class="number count" data-count="600">600</span>
+            <span class="number count" data-count="25">25</span>
             <span class="symbol">+</span>
           </div>
           <h6 class="title">Specialist</h6>
@@ -66,10 +65,10 @@
       >
         <div class="counterup-progress">
           <div class="icon">
-            <img src="assets/media/icon/apple.png" alt="Apple" />
+            <img src="assets/media/icon/apple.png" alt="Conglobase" />
           </div>
           <div class="count-number h2">
-            <span class="number count" data-count="64">64</span>
+            <span class="number count" data-count="1">1</span>
             <span class="symbol">+</span>
           </div>
           <h6 class="title">Years of operation</h6>
