--- a/views/partials/testimonials.hbs
+++ b/views/partials/testimonials.hbs
@@ -3,8 +3,7 @@
     <div class="section-heading heading-left">
       <span class="subtitle">Testimonial</span>
       <h2 class="title">From getting started</h2>
-      <p>Nulla facilisi. Nullam in magna id dolor blandit rutrum eget vulputate
-        augue sed eu leo eget risus imperdiet.</p>
+      <p>Our clients trust us to help them grow their online presence and drive more sales. Here's what a few of them have to say.</p>
     </div>
     <div class="row g-4">
       <div
@@ -20,8 +19,7 @@
             <i class="fa fa-star text-warning"></i>
             <i class="fa fa-star text-warning"></i>
             <i class="fa fa-star text-warning"></i></span>
-          <p>“ Donec metus lorem, vulputate at sapien sit amet, auctor iaculis
-            lorem. In vel hendrerit nisi. Vestibulum eget risus velit. ”</p>
+          <p class="truncate-line-4">“ Conglobase Solutions helped us revamp our website and improve our SEO. We've seen a significant increase in website traffic and online sales since working with them. They truly understand the digital marketing landscape and know how to make a business succeed online. ”</p>
           <div class="author-info">
             <div class="thumb">
               <img
@@ -49,8 +47,7 @@
             <i class="fa fa-star text-warning"></i>
             <i class="fa fa-star text-warning"></i>
             <i class="fa fa-star text-warning"></i></span>
-          <p>“ Donec metus lorem, vulputate at sapien sit amet, auctor iaculis
-            lorem. In vel hendrerit nisi. Vestibulum eget risus velit. ”</p>
+          <p class="truncate-line-4">“ We struggled to generate leads for our business until we started working with Conglobase Solutions. They helped us create a comprehensive digital marketing strategy and execute it flawlessly. Our lead generation has increased by over 200% and we couldn't be happier with the results. ”</p>
           <div class="author-info">
             <div class="thumb">
               <img
@@ -78,8 +75,7 @@
             <i class="fa fa-star text-warning"></i>
             <i class="fa fa-star text-warning"></i>
             <i class="fa fa-star text-warning"></i></span>
-          <p>“ Donec metus lorem, vulputate at sapien sit amet, auctor iaculis
-            lorem. In vel hendrerit nisi. Vestibulum eget risus velit. ”</p>
+          <p class="truncate-line-4">“ As a small business owner, I was hesitant to invest in digital marketing. But Conglobase Solutions proved me wrong. They took the time to understand our unique needs and goals, and developed a custom strategy that has helped us reach more customers and grow our revenue. Highly recommend! ”</p>
           <div class="author-info">
             <div class="thumb">
               <img
@@ -94,7 +90,7 @@
           </div>
         </div>
       </div>
-      <div
+      {{!-- <div
         class="col-lg-4"
         data-sal="slide-up"
         data-sal-duration="1000"
@@ -180,7 +176,7 @@
             </div>
           </div>
         </div>
-      </div>
+      </div> --}}
     </div>
   </div>
   <ul class="shape-group-4 list-unstyled">
