--- a/views/services2.hbs
+++ b/views/services2.hbs
@@ -1,4 +1,4 @@
-{{!-- <!--=====================================-->
+<!--=====================================-->
 <!--=       Breadcrumb Area Start       =-->
 <!--=====================================-->
 <div class="breadcrum-area breadcrumb-banner">
@@ -8,18 +8,18 @@
             <p>Give your business a unique logo to stand out from crowd. We’ll create logo specifically for your company.</p>
         </div>
         <div class="banner-thumbnail" data-sal="slide-up" data-sal-duration="1000" data-sal-delay="400">
-            <img class="paralax-image" src="assets/media/banner/banner-thumb-4.png" alt="Illustration">
+            <img class="paralax-image" src="/assets/media/banner/banner-thumb-4.png" alt="Illustration">
         </div>
     </div>
     <ul class="shape-group-8 list-unstyled">
         <li class="shape shape-1" data-sal="slide-right" data-sal-duration="500" data-sal-delay="100">
-            <img src="assets/media/others/bubble-9.png" alt="Bubble">
+            <img src="/assets/media/others/bubble-9.png" alt="Bubble">
         </li>
         <li class="shape shape-2" data-sal="slide-left" data-sal-duration="500" data-sal-delay="200">
-            <img src="assets/media/others/bubble-21.png" alt="Bubble">
+            <img src="/assets/media/others/bubble-21.png" alt="Bubble">
         </li>
         <li class="shape shape-3" data-sal="slide-up" data-sal-duration="500" data-sal-delay="300">
-            <img src="assets/media/others/line-4.png" alt="Line">
+            <img src="/assets/media/others/line-4.png" alt="Line">
         </li>
     </ul>
 </div>
@@ -63,7 +63,7 @@
                 <div class="col-lg-4 col-md-6" data-sal="slide-up" data-sal-duration="800" data-sal-delay="100">
                     <div class="services-grid service-style-2">
                         <div class="thumbnail">
-                            <img src="assets/media/icon/icon-29.png" alt="icon">
+                            <img src="/assets/media/icon/icon-29.png" alt="icon">
                         </div>
                         <div class="content">
                             <h5 class="title"> <a href="service-design.html">Logo &amp; Branding</a></h5>
@@ -75,7 +75,7 @@
                 <div class="col-lg-4 col-md-6" data-sal="slide-up" data-sal-duration="800" data-sal-delay="200">
                     <div class="services-grid service-style-2">
                         <div class="thumbnail">
-                            <img src="assets/media/icon/icon-27.png" alt="icon">
+                            <img src="/assets/media/icon/icon-27.png" alt="icon">
                         </div>
                         <div class="content">
                             <h5 class="title"> <a href="service-design.html">Website Design</a></h5>
@@ -87,7 +87,7 @@
                 <div class="col-lg-4 col-md-6" data-sal="slide-up" data-sal-duration="800" data-sal-delay="300">
                     <div class="services-grid service-style-2">
                         <div class="thumbnail">
-                            <img src="assets/media/icon/icon-28.png" alt="icon">
+                            <img src="/assets/media/icon/icon-28.png" alt="icon">
                         </div>
                         <div class="content">
                             <h5 class="title"> <a href="service-design.html">Mobile app design</a></h5>
@@ -100,7 +100,7 @@
                 <div class="col-lg-4 col-md-6" data-sal="slide-up" data-sal-duration="800" data-sal-delay="100">
                     <div class="services-grid service-style-2">
                         <div class="thumbnail">
-                            <img src="assets/media/icon/icon-4.png" alt="icon">
+                            <img src="/assets/media/icon/icon-4.png" alt="icon">
                         </div>
                         <div class="content">
                             <h5 class="title"> <a href="service-design.html">Graphic/print design</a></h5>
@@ -112,7 +112,7 @@
                 <div class="col-lg-4 col-md-6" data-sal="slide-up" data-sal-duration="800" data-sal-delay="200">
                     <div class="services-grid service-style-2">
                         <div class="thumbnail">
-                            <img src="assets/media/icon/icon-30.png" alt="icon">
+                            <img src="/assets/media/icon/icon-30.png" alt="icon">
                         </div>
                         <div class="content">
                             <h5 class="title"> <a href="service-design.html">Video production</a></h5>
@@ -135,7 +135,7 @@
                 <div class="col-lg-4 col-md-6" data-sal="slide-up" data-sal-duration="800" data-sal-delay="100">
                     <div class="services-grid service-style-2">
                         <div class="thumbnail">
-                            <img src="assets/media/icon/icon-31.png" alt="icon">
+                            <img src="/assets/media/icon/icon-31.png" alt="icon">
                         </div>
                         <div class="content">
                             <h5 class="title"> <a href="service-development.html">Content Managment</a></h5>
@@ -147,7 +147,7 @@
                 <div class="col-lg-4 col-md-6" data-sal="slide-up" data-sal-duration="800" data-sal-delay="200">
                     <div class="services-grid service-style-2">
                         <div class="thumbnail">
-                            <img src="assets/media/icon/icon-32.png" alt="icon">
+                            <img src="/assets/media/icon/icon-32.png" alt="icon">
                         </div>
                         <div class="content">
                             <h5 class="title"> <a href="service-development.html">Mobile app development</a></h5>
@@ -159,7 +159,7 @@
                 <div class="col-lg-4 col-md-6" data-sal="slide-up" data-sal-duration="800" data-sal-delay="300">
                     <div class="services-grid service-style-2">
                         <div class="thumbnail">
-                            <img src="assets/media/icon/icon-33.png" alt="icon">
+                            <img src="/assets/media/icon/icon-33.png" alt="icon">
                         </div>
                         <div class="content">
                             <h5 class="title"> <a href="service-development.html">eCommerce</a></h5>
@@ -183,7 +183,7 @@
                 <div class="col-lg-4 col-md-6" data-sal="slide-up" data-sal-duration="800" data-sal-delay="100">
                     <div class="services-grid service-style-2">
                         <div class="thumbnail">
-                            <img src="assets/media/icon/icon-34.png" alt="icon">
+                            <img src="/assets/media/icon/icon-34.png" alt="icon">
                         </div>
                         <div class="content">
                             <h5 class="title"> <a href="service-marketing.html">SEO</a></h5>
@@ -195,7 +195,7 @@
                 <div class="col-lg-4 col-md-6" data-sal="slide-up" data-sal-duration="800" data-sal-delay="200">
                     <div class="services-grid service-style-2">
                         <div class="thumbnail">
-                            <img src="assets/media/icon/icon-35.png" alt="icon">
+                            <img src="/assets/media/icon/icon-35.png" alt="icon">
                         </div>
                         <div class="content">
                             <h5 class="title"> <a href="service-marketing.html">Pay-per click</a></h5>
@@ -207,7 +207,7 @@
                 <div class="col-lg-4 col-md-6" data-sal="slide-up" data-sal-duration="800" data-sal-delay="300">
                     <div class="services-grid service-style-2">
                         <div class="thumbnail">
-                            <img src="assets/media/icon/icon-36.png" alt="icon">
+                            <img src="/assets/media/icon/icon-36.png" alt="icon">
                         </div>
                         <div class="content">
                             <h5 class="title"> <a href="service-marketing.html">Email marketing</a></h5>
@@ -220,7 +220,7 @@
                 <div class="col-lg-4 col-md-6" data-sal="slide-up" data-sal-duration="800" data-sal-delay="100">
                     <div class="services-grid service-style-2">
                         <div class="thumbnail">
-                            <img src="assets/media/icon/icon-37.png" alt="icon">
+                            <img src="/assets/media/icon/icon-37.png" alt="icon">
                         </div>
                         <div class="content">
                             <h5 class="title"> <a href="service-marketing.html">Display marketing</a></h5>
@@ -232,7 +232,7 @@
                 <div class="col-lg-4 col-md-6" data-sal="slide-up" data-sal-duration="800" data-sal-delay="200">
                     <div class="services-grid service-style-2">
                         <div class="thumbnail">
-                            <img src="assets/media/icon/icon-38.png" alt="icon">
+                            <img src="/assets/media/icon/icon-38.png" alt="icon">
                         </div>
                         <div class="content">
                             <h5 class="title"> <a href="service-marketing.html">Social Media marketing</a></h5>
@@ -255,7 +255,7 @@
                 <div class="col-lg-4 col-md-6" data-sal="slide-up" data-sal-duration="800" data-sal-delay="100">
                     <div class="services-grid service-style-2">
                         <div class="thumbnail">
-                            <img src="assets/media/icon/icon-39.png" alt="icon">
+                            <img src="/assets/media/icon/icon-39.png" alt="icon">
                         </div>
                         <div class="content">
                             <h5 class="title"> <a href="service-business.html">Digital strategy</a></h5>
@@ -267,7 +267,7 @@
                 <div class="col-lg-4 col-md-6" data-sal="slide-up" data-sal-duration="800" data-sal-delay="200">
                     <div class="services-grid service-style-2">
                         <div class="thumbnail">
-                            <img src="assets/media/icon/icon-40.png" alt="icon">
+                            <img src="/assets/media/icon/icon-40.png" alt="icon">
                         </div>
                         <div class="content">
                             <h5 class="title"> <a href="service-business.html">Business consulting</a></h5>
@@ -279,7 +279,7 @@
                 <div class="col-lg-4 col-md-6" data-sal="slide-up" data-sal-duration="800" data-sal-delay="300">
                     <div class="services-grid service-style-2">
                         <div class="thumbnail">
-                            <img src="assets/media/icon/icon-41.png" alt="icon">
+                            <img src="/assets/media/icon/icon-41.png" alt="icon">
                         </div>
                         <div class="content">
                             <h5 class="title"> <a href="service-business.html">Content writing</a></h5>
@@ -292,7 +292,7 @@
                 <div class="col-lg-4 col-md-6" data-sal="slide-up" data-sal-duration="800" data-sal-delay="100">
                     <div class="services-grid service-style-2">
                         <div class="thumbnail">
-                            <img src="assets/media/icon/icon-42.png" alt="icon">
+                            <img src="/assets/media/icon/icon-42.png" alt="icon">
                         </div>
                         <div class="content">
                             <h5 class="title"> <a href="service-business.html">Reporting</a></h5>
@@ -316,7 +316,7 @@
                 <div class="col-lg-4 col-md-6" data-sal="slide-up" data-sal-duration="800" data-sal-delay="100">
                     <div class="services-grid service-style-2">
                         <div class="thumbnail">
-                            <img src="assets/media/icon/icon-43.png" alt="icon">
+                            <img src="/assets/media/icon/icon-43.png" alt="icon">
                         </div>
                         <div class="content">
                             <h5 class="title"> <a href="service-technology.html">Hosting</a></h5>
@@ -328,7 +328,7 @@
                 <div class="col-lg-4 col-md-6" data-sal="slide-up" data-sal-duration="800" data-sal-delay="200">
                     <div class="services-grid service-style-2">
                         <div class="thumbnail">
-                            <img src="assets/media/icon/icon-44.png" alt="icon">
+                            <img src="/assets/media/icon/icon-44.png" alt="icon">
                         </div>
                         <div class="content">
                             <h5 class="title"> <a href="service-technology.html">Big data analysis</a></h5>
@@ -351,7 +351,7 @@
                 <div class="col-lg-4 col-md-6" data-sal="slide-up" data-sal-duration="800" data-sal-delay="100">
                     <div class="services-grid service-style-2">
                         <div class="thumbnail">
-                            <img src="assets/media/icon/icon-45.png" alt="icon">
+                            <img src="/assets/media/icon/icon-45.png" alt="icon">
                         </div>
                         <div class="content">
                             <h5 class="title"> <a href="service-content-strategy.html">Web Audit Practices</a></h5>
@@ -363,7 +363,7 @@
                 <div class="col-lg-4 col-md-6" data-sal="slide-up" data-sal-duration="800" data-sal-delay="200">
                     <div class="services-grid service-style-2">
                         <div class="thumbnail">
-                            <img src="assets/media/icon/icon-46.png" alt="icon">
+                            <img src="/assets/media/icon/icon-46.png" alt="icon">
                         </div>
                         <div class="content">
                             <h5 class="title"> <a href="service-content-strategy.html">Marketing Flexibility</a></h5>
@@ -375,7 +375,7 @@
                 <div class="col-lg-4 col-md-6" data-sal="slide-up" data-sal-duration="800" data-sal-delay="300">
                     <div class="services-grid service-style-2">
                         <div class="thumbnail">
-                            <img src="assets/media/icon/icon-47.png" alt="icon">
+                            <img src="/assets/media/icon/icon-47.png" alt="icon">
                         </div>
                         <div class="content">
                             <h5 class="title"> <a href="service-content-strategy.html">Advertising Strategy</a></h5>
@@ -401,26 +401,26 @@
             </div>
             <div class="thumbnail">
                 <div class="larg-thumb" data-sal="zoom-in" data-sal-duration="600" data-sal-delay="100">
-                    <img class="paralax-image" src="assets/media/others/chat-group.png" alt="Chat">
+                    <img class="paralax-image" src="/assets/media/others/chat-group.png" alt="Chat">
                 </div>
                 <ul class="list-unstyled small-thumb">
                     <li class="shape shape-1" data-sal="slide-right" data-sal-duration="800" data-sal-delay="400">
-                        <img class="paralax-image" src="assets/media/others/laptop-poses.png" alt="Laptop">
+                        <img class="paralax-image" src="/assets/media/others/laptop-poses.png" alt="Laptop">
                     </li>
                     <li class="shape shape-2" data-sal="slide-left" data-sal-duration="800" data-sal-delay="300">
-                        <img class="paralax-image" src="assets/media/others/bill-pay.png" alt="Bill">
+                        <img class="paralax-image" src="/assets/media/others/bill-pay.png" alt="Bill">
                     </li>
                 </ul>
             </div>
         </div>
     </div>
     <ul class="list-unstyled shape-group-9">
-        <li class="shape shape-1"><img src="assets/media/others/bubble-12.png" alt="Comments"></li>
-        <li class="shape shape-2"><img src="assets/media/others/bubble-16.png" alt="Comments"></li>
-        <li class="shape shape-3"><img src="assets/media/others/bubble-13.png" alt="Comments"></li>
-        <li class="shape shape-4"><img src="assets/media/others/bubble-14.png" alt="Comments"></li>
-        <li class="shape shape-5"><img src="assets/media/others/bubble-16.png" alt="Comments"></li>
-        <li class="shape shape-6"><img src="assets/media/others/bubble-15.png" alt="Comments"></li>
-        <li class="shape shape-7"><img src="assets/media/others/bubble-16.png" alt="Comments"></li>
+        <li class="shape shape-1"><img src="/assets/media/others/bubble-12.png" alt="Comments"></li>
+        <li class="shape shape-2"><img src="/assets/media/others/bubble-16.png" alt="Comments"></li>
+        <li class="shape shape-3"><img src="/assets/media/others/bubble-13.png" alt="Comments"></li>
+        <li class="shape shape-4"><img src="/assets/media/others/bubble-14.png" alt="Comments"></li>
+        <li class="shape shape-5"><img src="/assets/media/others/bubble-16.png" alt="Comments"></li>
+        <li class="shape shape-6"><img src="/assets/media/others/bubble-15.png" alt="Comments"></li>
+        <li class="shape shape-7"><img src="/assets/media/others/bubble-16.png" alt="Comments"></li>
     </ul>
-</section> --}}
+</section>
