--- a/views/about-us.hbs
+++ b/views/about-us.hbs
@@ -5,8 +5,8 @@
 <div class="breadcrum-area breadcrumb-banner">
     <div class="container">
         <div class="section-heading heading-left" data-sal="slide-right" data-sal-duration="1000" data-sal-delay="300">
-            <h1 class="title h2">One of the fastest growing agency</h1>
-            <p>We design and develop web and mobile applications for our clients worldwide.</p>
+            <h1 class="title h2">Empowering Your Business to Thrive</h1>
+            <p>Conglobase Solutions is dedicated to helping businesses achieve their full potential through effective digital marketing strategies. Our team of experts has a passion for driving growth and success for our clients. Join us on our mission to keep your business thriving, no matter the circumstances.</p>
         </div>
         <div class="banner-thumbnail thumbnail-4" data-sal="slide-up" data-sal-duration="1000" data-sal-delay="400">
             <img src="assets/media/banner/banner-thumb-3.png" alt="Illustration">
@@ -39,22 +39,22 @@
                 <div class="case-study-featured">
                     <div class="section-heading heading-left">
                         <span class="subtitle">Who we are</span>
-                        <h2 class="title">Building software for world changers</h2>
-                        <p>Donec metus lorem, vulputate at sapien sit amet, auctor iaculis lorem. In vel hendrerit nisi. Vestibulum eget risus velit. Aliquam tristique libero at dui sodales, et placerat orci lobortis.</p>
-                        <p>Maecenas ipsum neque, elementum id dignissim et, imperdiet vitae mauris.</p>
+                        <h2 class="title">Building Strong Online Presence for Thriving Businesses</h2>
+                        <p> We are dedicated to helping businesses grow and thrive in the digital age. We understand the importance of having an online presence in today's fast-paced and ever-changing business landscape.</p>
+                        <p>Our mission is to empower businesses of all sizes to reach their full potential.</p>
                         <a href="#" class="axil-btn btn-fill-primary btn-large">Read More</a>
                     </div>
                     <div class="case-study-counterup">
                         <div class="single-counterup">
                             <h2 class="count-number">
-                                <span class="number count" data-count="10">10</span>
+                                <span class="number count" data-count="1">1</span>
                                 <span class="symbol">+</span>
                             </h2>
                             <span class="counter-title">Years on the market</span>
                         </div>
                         <div class="single-counterup">
                             <h2 class="count-number">
-                                <span class="number count" data-count="1500">1500</span>
+                                <span class="number count" data-count="200">200</span>
                                 <span class="symbol">+</span>
                             </h2>
                             <span class="counter-title">Projects delivered so far</span>
@@ -71,48 +71,51 @@
 <section class="section section-padding bg-color-dark pb--80 pb_lg--40 pb_md--20">
     <div class="container">
         <div class="section-heading heading-light-left mb--100">
-            <span class="subtitle">Our Valus</span>
+            <span class="subtitle">Our Values</span>
             <h2 class="title">Why should you work with us?</h2>
-            <p class="opacity-50">Nulla facilisi. Nullam in magna id dolor
-                blandit rutrum eget vulputate augue sed eu leo eget risus imperdiet.</p>
+            <p class="opacity-50">There are several reasons why you should choose Conglobase Solutions Private Limited for your digital marketing needs.</p>
         </div>
         <div class="row">
             <div class="col-lg-4">
                 <div class="about-quality active">
                     <h3 class="sl-number">1</h3>
-                    <h5 class="title">Exceed clients’ and colleagues’ expectations</h5>
-                    <p>Ut id orci ultricies, gravida arcu ac, elementum
-                        eros. Curabitur tortor ipsum, imperdiet eget odio
-                        ac, faucibus ultricies nisl. Maecenas
-                        scelerisque dignissim elit.</p>
+                    <h5 class="title">Expertise</h5>
+                    <p>Our team is comprised of experts in the field of digital marketing. We have the skills and knowledge needed to help your business succeed in the digital world.</p>
                 </div>
             </div>
             <div class="col-lg-4">
                 <div class="about-quality">
                     <h3 class="sl-number">2</h3>
-                    <h5 class="title">Take ownership and question the status quo in a constructive manner</h5>
-                    <p>Nulla facilisi. Vestibulum vel urna eget magna condimentum faucibus. Sed arcu mi, semper sed suscipit vel, rhoncus vel justo.</p>
+                    <h5 class="title">Customized solutions</h5>
+                    <p>We understand that every business is unique and requires a customized approach. We work closely with our clients to understand their specific needs and goals, and develop a plan that is tailored to their business.</p>
                 </div>
             </div>
             <div class="col-lg-4">
                 <div class="about-quality">
                     <h3 class="sl-number">3</h3>
-                    <h5 class="title">Be brave, curious and experiment – learn from all successes and failures</h5>
-                    <p>Quisque aliquet quis est in faucibus. Aenean eget lorem ac risus placerat convallis eget a eros. Suspendisse dignissim ultrices tellus, id placerat mauris lacinia a.</p>
+                    <h5 class="title">Proven results</h5>
+                    <p>We have a track record of delivering results for our clients. We have helped businesses increase their online visibility, reach new customers and grow their revenue.</p>
                 </div>
             </div>
             <div class="col-lg-4">
                 <div class="about-quality">
                     <h3 class="sl-number">4</h3>
-                    <h5 class="title">Act in a way that makes all of us proud</h5>
-                    <p>Proin dignissim facilisis tortor a mattis. Morbi non maximus nunc, ut mattis tellus. In hac habitasse platea dictumst. Mauris viverra enim tellus, vel ultrices dolor aliquam non.</p>
+                    <h5 class="title">Personalized service</h5>
+                    <p>We pride ourselves on providing personalized service to our clients. We take the time to understand their business and work closely with them to achieve their goals.</p>
                 </div>
             </div>
             <div class="col-lg-4">
                 <div class="about-quality">
                     <h3 class="sl-number">5</h3>
-                    <h5 class="title">Build an inclusive, transparent and socially responsible culture</h5>
-                    <p>Maecenas eros sapien, egestas at elit nec, eleifend sagittis orci.</p>
+                    <h5 class="title">Affordable pricing</h5>
+                    <p>We understand the importance of cost-effectiveness, especially in the current economic climate. That's why we offer competitive pricing for our services, without compromising on the quality of the work.</p>
+                </div>
+            </div>
+            <div class="col-lg-4">
+                <div class="about-quality">
+                    <h3 class="sl-number">6</h3>
+                    <h5 class="title">Commitment to our clients</h5>
+                    <p>We are committed to the success of our clients and will go above and beyond to ensure that they are satisfied with our work.</p>
                 </div>
             </div>
         </div>
@@ -140,9 +143,9 @@
                 <div class="about-team">
                     <div class="section-heading heading-left">
                         <span class="subtitle">Our Team</span>
-                        <h2>Alone we can do so little; together we can do so much.</h2>
-                        <p>Donec metus lorem, vulputate at sapien sit amet, auctor iaculis lorem. In vel hendrerit nisi. Vestibulum eget risus velit. Aliquam tristique libero.</p>
-                        <a href="team.html" class="axil-btn btn-large btn-fill-primary">Our Team</a>
+                        <h2>Meet Our Dynamic Team!</h2>
+                        <p>At Conglobase Solutions Private Limited, our team is comprised of dedicated and talented professionals who are passionate about helping businesses grow and succeed. With a diverse background in digital marketing and a wealth of experience in the industry, our team is well-equipped to handle even the most complex projects.</p>
+                        <a href="team" class="axil-btn btn-large btn-fill-primary">Our Team</a>
                     </div>
                 </div>
             </div>
@@ -155,9 +158,9 @@
 <section class="section section-padding bg-color-light pb--70">
     <div class="container">
         <div class="section-heading mb--90">
-            <span class="subtitle">Process</span>
-            <h2 class="title">Our logo design process</h2>
-            <p>Our comprehensive logo design strategy ensures a perfectly crafted logo for your business.</p>
+            <span class="subtitle">Our Story</span>
+            <h2 class="title">Our journey towards change</h2>
+            <p> We specialize in helping businesses establish and grow their online presence, in order to reach more customers and drive sales</p>
         </div>
         <div class="process-work" data-sal="slide-right" data-sal-duration="1000" data-sal-delay="100">
             <div class="thumbnail paralax-image">
@@ -165,8 +168,8 @@
             </div>
             <div class="content">
                 <span class="subtitle">Step One</span>
-                <h3 class="title">Discover</h3>
-                <p>Donec metus lorem, vulputate at sapien sit amet, auctor iaculis lorem. In vel hendrerit nisi. Vestibulum eget risus velit. Aliquam tristique libero at dui sodales, et placerat orci lobortis. Maecenas ipsum neque, elementum id dignissim et, imperdiet vitae mauris.</p>
+                <h3 class="title">Origins</h3>
+                <p>The idea for Conglobase Solutions was born out of the struggles many businesses faced during the COVID-19 pandemic. We saw firsthand how businesses without a strong online presence were struggling to survive, and we knew we had to do something to help</p>
             </div>
         </div>
         <div class="process-work content-reverse" data-sal="slide-left" data-sal-duration="1000" data-sal-delay="100">
@@ -175,8 +178,8 @@
             </div>
             <div class="content">
                 <span class="subtitle">Step Two</span>
-                <h3 class="title">Prototype</h3>
-                <p>Donec metus lorem, vulputate at sapien sit amet, auctor iaculis lorem. In vel hendrerit nisi. Vestibulum eget risus velit. Aliquam tristique libero at dui sodales, et placerat orci lobortis. Maecenas ipsum neque, elementum id dignissim et, imperdiet vitae mauris.</p>
+                <h3 class="title">Evolution</h3>
+                <p>Since our founding, we have been dedicated to helping businesses establish and grow their online presence through a variety of digital marketing strategies. From website design to social media marketing, we provide a comprehensive suite of services to help our clients succeed.</p>
             </div>
         </div>
         <div class="process-work" data-sal="slide-right" data-sal-duration="1000" data-sal-delay="100">
@@ -185,8 +188,9 @@
             </div>
             <div class="content">
                 <span class="subtitle">Step Three</span>
-                <h3 class="title">Test</h3>
-                <p>Donec metus lorem, vulputate at sapien sit amet, auctor iaculis lorem. In vel hendrerit nisi. Vestibulum eget risus velit. Aliquam tristique libero at dui sodales, et placerat orci lobortis. Maecenas ipsum neque, elementum id dignissim et, imperdiet vitae mauris.</p>
+                <h3 class="title">Growth</h3>
+                <p>As we continue to grow and evolve as a company, we are committed to staying on the cutting edge of digital marketing trends and technologies in order to provide our clients with the best possible results.
+</p>
             </div>
         </div>
         <div class="process-work content-reverse" data-sal="slide-left" data-sal-duration="1000" data-sal-delay="100">
@@ -195,8 +199,12 @@
             </div>
             <div class="content">
                 <span class="subtitle">Step four</span>
-                <h3 class="title">Build</h3>
-                <p>Donec metus lorem, vulputate at sapien sit amet, auctor iaculis lorem. In vel hendrerit nisi. Vestibulum eget risus velit. Aliquam tristique libero at dui sodales, et placerat orci lobortis. Maecenas ipsum neque, elementum id dignissim et, imperdiet vitae mauris.</p>
+                <h3 class="title">Vision, Mission and Values</h3>
+                <p><b>Vision:</b> Our vision is to be the leading digital marketing agency, helping businesses to grow and succeed online.</p>
+                <p><b>Mission:</b> Our mission is to help businesses of all sizes and industries thrive in the digital age by providing them with the tools and strategies they need to succeed online.</p>
+                <p>
+                     <b>Values:</b> Transparency, Trustworthiness and Quality are the core values of our company.
+                </p>
             </div>
         </div>
     </div>
